* 2014-01-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 30641: Recognize "FF D8 FF E2" byte signature as JPEG image

* 2014-01-15 - thorben.betten@open-xchange.com

 - Fix for bug 30643: Don't conflict with same folder on duplicate check

* 2014-01-15 - tobias.friedrich@open-xchange.com

 - Fix for bug 30384: Don't trigger unnecessary events, don't spawn new threads for checking idle time in IMAP store containers

* 2014-01-14 - marcus.klein@open-xchange.com

 - Fix for bug 30634: Fixed broken update task. Removed local variable to ensure the method for the DatabaseService is used.

* 2014-01-14 - ioannis.chouklis@open-xchange.com

 - Fix for bug 30390: forwarded mail with attachment gets crippled

* 2014-01-13 - felix.marx@open-xchange.com

 - Fix for bug 30584: Right usage of url resolving for publication administration

* 2014-01-13 - thorben.betten@open-xchange.com

 - Fix for bug 30571: Load snippet attributes from database, do not parse them from MIME content

* 2014-01-13 - jan.bauerdick@open-xchange.com

 - Fix for bug 30607: Use https instead of http

* 2014-01-13 - martin.herfurth@open-xchange.com

 - Fix for bug 29807: Missing confirmations status of participants in update mail and bad check for last modified.

* 2014-01-10- jan.bauerdick@open-xchange.com

 - Fix for bug 30544: sanitizefilemimetypes.in was located in 2 bundles (c.o.oxscripts.clt & oxscripts).
                      Deleted it from oxscripts.

* 2014-01-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 29950: Respond with HTTP 401 Unauthorized in case of access restrictions  
 - Fix for bug 30552: Allow UNLOCK for WebDAV resources only for the lock-owning user and the context administrator 

* 2014-01-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 30549: Don't try and guess mime type from empty stream

* 2014-01-09 - thorben.betten@open-xchange.com

 - Fix for bug 29639: Use configured default charset to url-decode incoming requests' URIs