@@ -79,7 +79,9 @@ import org.junit.runners.Suite.SuiteClasses;
     com.openexchange.mail.mime.MimeSmilFixerTest.class,
     com.openexchange.groupware.notify.ParticipantNotifyTest.class,
     com.openexchange.mail.json.actions.GetAttachmentActionTest.class,
-    com.openexchange.ajax.requesthandler.converters.preview.cache.FileStoreResourceCacheImplTest.class
+    com.openexchange.ajax.requesthandler.converters.preview.cache.FileStoreResourceCacheImplTest.class,
+    com.openexchange.server.services.SharedInfostoreJSlobTest.class,
+    com.openexchange.groupware.upload.quotachecker.MailUploadQuotaCheckerTest.class
 })
 public class UnitTests {
 
